# vpn-service

./: README.md  config.py  get_uuid.py  make_config.py  pyproject.toml  Задание.md
