[tool.poetry]
name = "wireguard_configs"
version = "0.1.0"
description = ""
authors = ["Ilya Isko <ilufkai2000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
